# mythic-index-mcp

./: .gitignore  LICENSE  README.md  mcp_server.py  pyproject.toml  requirements.txt  server.json
docs/: remote-mcp-plan.md
mcpb-build/: manifest.json
scripts/: build-mcpb.sh
skill/: SKILL.md  system_prompt.md
